# Pyroclast

./: .gitignore  README.md  pyproject.toml
examples/2D/stokes_circular_inclusion/: animation.ipynb  input.toml  visualisation.ipynb
examples/2D/stokes_circular_inclusion_mg/: input.toml  render_animation.py
examples/2D/stokes_square_inclusion_uzawa/: input.toml  visualisation.ipynb
examples/2D/stokes_square_inclusion_uzawa_gmg/: input.toml  visualisation.ipynb
examples/advection_2D/: input.toml  render_animation.py
examples/stokes_2D/circular_inclusion/: input.toml
examples/stokes_2D/circular_inclusion_mg/: input.toml
examples/stokes_2D/n_sink_benchmark/: input.toml  render_animation.py
scratch/: validation.py
scripts/: minimal_working_smoother.py
scripts/benchmarks/: plot_results.ipynb
share/: setup-env.sh
src/: logging.py
src/Pyroclast/: banner.py  context.py  defaults.py  format.py  linalg.py  main.py  rng.py  string_util.py
src/Pyroclast/grid/: base_grid.py  staggered2D.py
src/Pyroclast/interpolation/: linear_2D_cpu.py  utils.py
src/Pyroclast/model/: advection_2D.py  base_model.py  stokes_2D.py  stokes_continuity_2D.py  stokes_continuity_2D_uzawa.py  stokes_continuity_markers.py
src/Pyroclast/model/stokes_2D_mg/: __init__.py  gmg.py  (+12 more)
src/Pyroclast/pool/: base_pool.py  basic2D.py  inclusion2D.py  n_sink.py
src/Pyroclast/profiling/: __init__.py  timer.py
src/benchmark/: __init__.py  benchmark_validators.py  benchmark_wrapper.py  config.py  defaults.py  git_checks.py  plotter.py  printer.py  results_processing.py  runner.py  utils.py
(+25 files in other folders)
