[project]
name = "Pyroclast"
version = "0.1.0"
description = "A successor to the geodynamic numerical modeling codes I2ELVIS and I3ELVIS"
authors = [
    {name = "Marcel Ferrari",email = "mferrari@ethz.ch"},
    {name = "Alexander Sotoudeh", email = "asotoudeh@ethz.ch"}
]
license = {text = "Mozilla Public License, v. 2.0"}
readme = "README.md"
requires-python = ">=3.10"

# Should we discover, that a specific version has a major bug, that fuckes up something, we can put stronger version
# constraints in there to prevent users from experiencing bigger errors.
dependencies = [
    "numba (>=0.61.2,<0.62.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "toml (>=0.10.2,<0.11.0)",
]

[tool.poetry]
packages = [{include = "Pyroclast", from="src"}]

[tool.poetry.group.dev.dependencies]
pyinstrument = "^5.0.2"
tzlocal = "^5.3.1"
gitpython = "^3.1.44"
seaborn = "^0.13.2"
scipy = ">=1.15.3,<2.0.0"
notebook = ">=7.4.3,<8.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
